<?xml version="1.0"?>
<package format="2">
  <name>human_traj_estimator</name>
  <version>0.0.0</version>
  <description>The human_traj_estimation package</description>
  <maintainer email="lagrangia@todo.todo">lagrangia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosdyn_core</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pbo_service</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
